--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -38,9 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Get LATEST driver version for 84.0.4147\n",
-      "[WDM] - Trying to download new driver from http://chromedriver.storage.googleapis.com/84.0.4147.30/chromedriver_win32.zip\n",
-      "[WDM] - Driver has been saved in cache [C:\\Users\\amyel\\.wdm\\drivers\\chromedriver\\win32\\84.0.4147.30]\n"
+      "[WDM] - Driver [C:\\Users\\amyel\\.wdm\\drivers\\chromedriver\\win32\\84.0.4147.30\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -125,8 +123,8 @@
     }
    ],
    "source": [
-    "text_all = soup.find(\"div\", class_= \"article_teaser_body\").text\n",
-    "text_all"
+    "mars_text = soup.find(\"div\", class_= \"article_teaser_body\").text\n",
+    "mars_text"
    ]
   },
   {
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +229,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +250,7 @@
        "list"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +352,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -399,48 +397,54 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Mars</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Description</th>\n",
-       "      <th></th>\n",
+       "      <th>Mars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Equatorial Diameter:</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Equatorial Diameter:</td>\n",
        "      <td>6,792 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Polar Diameter:</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Polar Diameter:</td>\n",
        "      <td>6,752 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mass:</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
        "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Moons:</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
        "      <td>2 (Phobos &amp; Deimos)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Distance:</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Orbit Distance:</td>\n",
        "      <td>227,943,824 km (1.38 AU)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Orbit Period:</th>\n",
+       "      <th>5</th>\n",
+       "      <td>Orbit Period:</td>\n",
        "      <td>687 days (1.9 years)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Surface Temperature:</th>\n",
+       "      <th>6</th>\n",
+       "      <td>Surface Temperature:</td>\n",
        "      <td>-87 to -5 °C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>First Record:</th>\n",
+       "      <th>7</th>\n",
+       "      <td>First Record:</td>\n",
        "      <td>2nd millennium BC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Recorded By:</th>\n",
+       "      <th>8</th>\n",
+       "      <td>Recorded By:</td>\n",
        "      <td>Egyptian astronomers</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -448,20 +452,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               Mars\n",
-       "Description                                        \n",
-       "Equatorial Diameter:                       6,792 km\n",
-       "Polar Diameter:                            6,752 km\n",
-       "Mass:                 6.39 × 10^23 kg (0.11 Earths)\n",
-       "Moons:                          2 (Phobos & Deimos)\n",
-       "Orbit Distance:            227,943,824 km (1.38 AU)\n",
-       "Orbit Period:                  687 days (1.9 years)\n",
-       "Surface Temperature:                   -87 to -5 °C\n",
-       "First Record:                     2nd millennium BC\n",
-       "Recorded By:                   Egyptian astronomers"
+       "            Description                           Mars\n",
+       "0  Equatorial Diameter:                       6,792 km\n",
+       "1       Polar Diameter:                       6,752 km\n",
+       "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       "3                Moons:            2 (Phobos & Deimos)\n",
+       "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       "5         Orbit Period:           687 days (1.9 years)\n",
+       "6  Surface Temperature:                   -87 to -5 °C\n",
+       "7         First Record:              2nd millennium BC\n",
+       "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,31 +484,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-56-e7c156c74a87>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtable2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'head'"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
     }
-   ],
+   },
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "table.to_html(\"table.html\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mars images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemi_url= \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "#browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "browser.visit(hemi_url)\n",
+    "\n",
+    "time.sleep(5)\n",
+    "\n",
+    "html_hemi = browser.html\n",
+    "\n",
+    "time.sleep(5)\n",
+    "\n",
+    "soup_hemi = bs(html_hemi, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemi_titles = soup_hemi.find_all('div', class_=\"item\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\"><h3>Cerberus Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p></div> <!-- end description --></div>,\n",
+       " <div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/schiaparelli_enhanced\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/schiaparelli_enhanced\"><h3>Schiaparelli Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p></div> <!-- end description --></div>,\n",
+       " <div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/syrtis_major_enhanced\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/syrtis_major_enhanced\"><h3>Syrtis Major Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p></div> <!-- end description --></div>,\n",
+       " <div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/valles_marineris_enhanced\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/valles_marineris_enhanced\"><h3>Valles Marineris Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p></div> <!-- end description --></div>]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemi_titles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print all titles\n",
+    "\n",
+    "    # A blank list to hold the titles\n",
+    "titles_list = []\n",
+    "    # Loop over td elements\n",
+    "    for title in hemi_titles:\n",
+    "        # If td element has an header3...\n",
+    "        if (title.h3):\n",
+    "            # And the header has text...\n",
+    "            if (title.h3.text):\n",
+    "                # Append that text to the list\n",
+    "                titles_list.append(title.h3.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cerberus Hemisphere Enhanced',\n",
+       " 'Schiaparelli Hemisphere Enhanced',\n",
+       " 'Syrtis Major Hemisphere Enhanced',\n",
+       " 'Valles Marineris Hemisphere Enhanced']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\amyel\\anaconda3\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:493: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an empty list to store each dictionary\n",
+    "hemi_img_list = []\n",
+    "\n",
+    "for title in titles_list:\n",
+    "    # go to Website\n",
+    "    hemi_img_url= \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "    browser.visit(hemi_img_url)\n",
+    "    \n",
+    "    #give it time\n",
+    "    time.sleep(5)\n",
+    "    \n",
+    "    # Click each image URL\n",
+    "    browser.click_link_by_partial_text(title)\n",
+    "\n",
+    "    # Scrape each page into Soup\n",
+    "    html = browser.html\n",
+    "    hemi_img_soup = bs(html, \"html.parser\")\n",
+    "    image_url = hemi_img_soup.find_all(\"li\")[0].a[\"href\"]\n",
+    "\n",
+    "\n",
+    "    # Create a dictionary of title and url\n",
+    "    hemi_img_dict = {\"title\":title, \"image_url\":image_url}\n",
+    "    # add this dictionary to the list\n",
+    "    hemi_img_list.append(hemi_img_dict)\n",
+    "\n",
+    "\n",
+    "# Close the browser automatically\n",
+    "browser.quit()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'image_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'image_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'image_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'image_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemi_img_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
